# IOT-CPRO-K25.2-Assignments

01_variables_and_data_types/assignments/Smart-Plant-Watering-System/: Makefile
01_variables_and_data_types/assignments/Smart-Plant-Watering-System/inc/: actuators.h  config.h  display_server.h  panel_client.h  sensors.h  utils.h  watering_logic.h
01_variables_and_data_types/assignments/Smart-Plant-Watering-System/src/: actuators.c  display_server.c  main.c  panel_client.c  sensors.c  utils.c  watering_logic.c
08_file_system/assignments/File-Stat/: Makefile  filestat.c
09_exception_handling/assignments/Implement-Logging-Library/: Makefile
09_exception_handling/assignments/Implement-Logging-Library/App/: main.c
09_exception_handling/assignments/Implement-Logging-Library/Logger/: logger.c  logger.h
12_mock_project/assignments/DHT22-Sensor-Mock-Exercise/: Makefile
12_mock_project/assignments/DHT22-Sensor-Mock-Exercise/App/: main.c
12_mock_project/assignments/DHT22-Sensor-Mock-Exercise/DHT22/: DHT22.c  DHT22.h
12_mock_project/assignments/DHT22-Sensor-Mock-Exercise/Test/: Test_Service.c  Test_Service.h
14_accessing_data_and_dealing_with_exceptions/assignments/Student-Directory/: Makefile
14_accessing_data_and_dealing_with_exceptions/assignments/Student-Directory/App/: main.cpp
14_accessing_data_and_dealing_with_exceptions/assignments/Student-Directory/Student/: Student.cpp  Student.hpp
15_basic_object_oriented_programming/assignments/Basic-OOP/App/: main.cpp
15_basic_object_oriented_programming/assignments/Basic-OOP/Student/: Student.cpp  Student.hpp
17_sequence_containers_and_container_adapters/assignments/Class-Hierarchy-For-Book-Types/: Makefile
17_sequence_containers_and_container_adapters/assignments/Class-Hierarchy-For-Book-Types/App/: main.cpp
17_sequence_containers_and_container_adapters/assignments/Class-Hierarchy-For-Book-Types/Book/: Book.cpp  Book.hpp
19_ memory_management/assignments/Console-Image-Processing/RawPointers/: Makefile  valgrind_log.txt
19_ memory_management/assignments/Console-Image-Processing/SmartPointers/: Makefile  rawpointer_versus_smartpointer.txt  valgrind_log.txt
22_mock_proejct_c++/assignments/IOT_CPRO_K25.2_Mock_Project/IOT_CPRO_K52_Mock_Prj/: CMakeLists.txt  CMakeLists.txt.user.e2f6b22  adddevicedialog.h  adddevicedialog.ui  device.h  devicemanager.cpp  devicemanager.h  main.cpp  smartdevicemanager.h  smartdevicemanager.ui
22_mock_project_c++/assignments/IOT_CPRO_K25.2_Mock_Project/: Mock_IOT_CPRO_K25.2.txt
22_mock_project_c++/assignments/IOT_CPRO_K25.2_Mock_Project/IOT_CPRO_K52_Mock_Prj/: adddevicedialog.cpp  device.cpp  newdevice.cpp  (+1 more)
(+5 files in other folders)
